# hybrid-doc-retrieval

./: README.md  pyproject.toml
data/: project_airport.txt  project_bridge.txt  project_hospital.txt  project_mall.txt  project_metro.txt  project_office.txt  project_residential.txt  project_riverside.txt  project_skyline.txt  project_solar.txt
output/: run_20260407_142634.json  run_20260407_142634.txt  run_20260407_155330.json  run_20260407_155330.txt
src/: evaluation.py  ground_truth.json  hybrid_retrieval.py  ingestion_pipeline.py  main.py
